Add docker fule and message controller
