# swagger_server/models/__init__.py
@@ -4,4 +4,6 @@
 from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.draft import Draft
+from swagger_server.models.draft_post import DraftPost
 from swagger_server.models.message import Message
+from swagger_server.models.message_post import MessagePost
